workloads/litmus-slack-redirect/litmus_slack_redirect_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-litmus-website-cluster
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/tls-acme: "true"
    nginx.org/server-snippets: "gzip on;"
  name: litmus-slack-redirect
  namespace: default
spec:
  rules:
  - host: slack.litmuschaos.io
    http:
      paths:
      - backend:
          serviceName: litmus-slack-redirect
          servicePort: 80
        path: "/(.*)"
  tls:
  - hosts:
    - slack.litmuschaos.io
    secretName: litmus-slack-redirect
